Require Zope 2.12;  simplify buildout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,21 +1,15 @@
 [buildout]
-parts = zope2 instance test
+parts = interpreter test
 develop = .
+unzip = true
 
-[zope2]
-recipe = plone.recipe.zope2install
-url = http://www.zope.org/Products/Zope/2.11.1/Zope-2.11.1-final.tgz
-
-[instance]
-recipe = plone.recipe.zope2instance
-zope2-location = ${zope2:location}
-user = admin:admin
-eggs = Products.PluginRegistry
-       Products.GenericSetup
-       Products.PluggableAuthService
+[interpreter]
+recipe = zc.recipe.egg
+interpreter = python
+eggs =
+    Products.PluggableAuthService
 
 [test]
-recipe = collective.recipe.z2testrunner
-zope2part = instance
-packages = Products.PluggableAuthService
-defaults = ['-c']
+recipe = zc.recipe.testrunner
+eggs =
+    Products.PluggableAuthService
