Major cleanup (such as PEP8 et al, see details in CHANGES.rst)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,22 +1,62 @@
 [buildout]
-parts = interpreter test
+extends =
+    http://dist.plone.org/versions/zope-2-13-23-versions.cfg
+
+versions = versions
+parts +=
+    omelette
+    coverage
+    code-analysis
+
 develop = .
 unzip = true
-index = http://download.zope.org/Zope2/index/2.13.19/
-find-links =
-    http://pypi.python.org/packages/source/P/Products.GenericSetup/
-    http://pypi.python.org/packages/source/P/Products.PluginRegistry/
-    http://pypi.python.org/packages/source/f/five.localsitemanager/
-extends =
-    http://download.zope.org/Zope2/index/2.13.19/versions.cfg
 
-[interpreter]
-recipe = zc.recipe.egg
-interpreter = python
+[versions]
+setuptools =
+zc.buildout =
+# Get support for @security decorators
+AccessControl = 3.0.11
+
+[code-analysis]
+recipe = plone.recipe.codeanalysis
+directory = ${buildout:directory}/Products
+flake8-ignore = C901,E241
+flake8-max-complexity = 20
+clean-lines = False
+imports = True
+debug-statements = True
+utf8-header = True
+
+[instance]
+recipe = plone.recipe.zope2instance
+user = admin:admin
+http-address = 8080
+debug-mode = on
+verbose-security = off
+deprecation-warnings = on
+blob-storage = var/blobstorage
+
 eggs =
+    Products.PluggableAuthService
+    ipdb
+
+zcml =
     Products.PluggableAuthService
 
 [test]
 recipe = zc.recipe.testrunner
 eggs =
     Products.PluggableAuthService
+    ipdb
+defaults = ['--auto-color', '--auto-progress']
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs =
+    ${instance:eggs}
+ignore-develop = true
+
+[coverage]
+recipe = zc.recipe.testrunner
+eggs = ${test:eggs}
+defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
