--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
-*.pyc
-*.pyo
+*$py.class
+*.db
+*.egg
 *.egg-info
+*.fs
+*.fs.*
+*.log
+*.mo
+*.project
+*.pt.py
+*.pyc
+*.pydevproject
+*.settings
+*.txt.py
+.codeintel
+.DS_Store
 .installed.cfg
-bin/
-develop-eggs/
-eggs/
-parts/
+.mr.developer.cfg
+bin
+build
+buildout.cfg
+cache
+contributor_data/
+data
+develop-eggs
+devsrc/
+dist
+docs/_build
+include/
+lib/
+local/
+parts
+passwd
+var
