Require Zope4 et al.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,20 +1,19 @@
 [buildout]
-parts = interpreter test
+extends =
+    https://zopefoundation.github.io/Zope/releases/4.0a3/versions-prod.cfg
+parts =
+    zopepy
+    test
 develop = .
 unzip = true
-index = http://download.zope.org/Zope2/index/2.13.19/
-find-links =
-    http://pypi.python.org/simple/Products.GenericSetup/
-    http://pypi.python.org/simple/Products.PluginRegistry/
-    http://pypi.python.org/simple/five.localsitemanager/
-extends =
-    http://download.zope.org/Zope2/index/2.13.19/versions.cfg
 
-[interpreter]
+[zopepy]
 recipe = zc.recipe.egg
-interpreter = python
+zopepy = python
 eggs =
     Products.PluggableAuthService
+interpreter = zopepy
+scripts = zopepy
 
 [test]
 recipe = zc.recipe.testrunner
