Checkout Hanno's Zope2 'restore_response_unauthorized' branch.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,7 @@
 [buildout]
+extensions = mr.developer
+github = git://github.com/zopefoundation
+github_push = git@github.com:zopefoundation
 extends =
     https://zopefoundation.github.io/Zope/releases/4.0a3/versions-prod.cfg
 parts =
@@ -6,6 +9,9 @@ parts =
     test
 develop = .
 unzip = true
+
+[sources]
+Zope2 = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope branch=restore_response_unauthorized
 
 [zopepy]
 recipe = zc.recipe.egg
