Don't test HTTP status names, use Zope2 branch.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,9 @@ parts =
 develop = .
 unzip = true
 
+auto-checkout =
+    Zope2
+
 [sources]
 Zope2 = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope branch=restore_response_unauthorized
 
