Update to released Zope 4.0a6.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,7 @@ extensions = mr.developer
 github = git://github.com/zopefoundation
 github_push = git@github.com:zopefoundation
 extends =
-    https://zopefoundation.github.io/Zope/releases/4.0a3/versions-prod.cfg
+    https://zopefoundation.github.io/Zope/releases/4.0a6/versions-prod.cfg
 parts =
     zopepy
     test
@@ -11,10 +11,9 @@ develop = .
 unzip = true
 
 auto-checkout =
-    Zope2
 
 [sources]
-Zope2 = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope branch=restore_response_unauthorized
+Zope2 = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope
 
 [zopepy]
 recipe = zc.recipe.egg
