Modernize buildout and packaging (#7)
* Use newer image for testing.
* Update bootstrap.
* Don't test HTTP status names.
* Update to released Zope 4.0a6.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,18 +1,23 @@
 [buildout]
-parts = interpreter test
+extensions = mr.developer
+github = git://github.com/zopefoundation
+github_push = git@github.com:zopefoundation
+extends =
+    https://zopefoundation.github.io/Zope/releases/4.0a6/versions-prod.cfg
+parts =
+    zopepy
+    test
 develop = .
 unzip = true
-index = http://download.zope.org/Zope2/index/2.13.19/
-find-links =
-    http://pypi.python.org/simple/Products.GenericSetup/
-    http://pypi.python.org/simple/Products.PluginRegistry/
-    http://pypi.python.org/simple/five.localsitemanager/
-extends =
-    http://download.zope.org/Zope2/index/2.13.19/versions.cfg
 
-[interpreter]
+auto-checkout =
+
+[sources]
+Zope2 = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope
+
+[zopepy]
 recipe = zc.recipe.egg
-interpreter = python
+interpreter = zopepy
 eggs =
     Products.PluggableAuthService
 
