WIP: Make ZServer optional.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ extends =
 parts =
     zopepy
     test
+    test-zserver
 develop = .
 unzip = true
 auto-checkout =
@@ -24,3 +25,8 @@ eggs =
 recipe = zc.recipe.testrunner
 eggs =
     Products.PluggableAuthService
+
+[test-zserver]
+recipe = zc.recipe.testrunner
+eggs =
+    Products.PluggableAuthService[zserver]
