--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     py27,
+    py27-zserver,
     py34,
     py35,
     py36,
@@ -8,9 +9,12 @@ envlist =
 
 [testenv]
 skip_install = true
+bootstrap = {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
+buildout = {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir}
+run_command = coverage run {envbindir}/test {posargs:-vc1}
 commands =
-    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
-    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir}
+    {[testenv]bootstrap}
+    {[testenv]buildout} install test
     coverage run {envbindir}/test {posargs:-vc1}
 deps =
     setuptools==33.1.1
@@ -18,6 +22,12 @@ deps =
     coverage
 setenv =
     COVERAGE_FILE=.coverage.{envname}
+
+[testenv:py27-zserver]
+commands =
+    {[testenv]bootstrap}
+    {[testenv]buildout} install test-zserver
+    coverage run {envbindir}/test-zserver {posargs:-vc1}
 
 [testenv:coverage-report]
 basepython = python2.7
