--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,10 +10,12 @@ parts =
     test-zserver
 develop = .
 unzip = true
+sources-dir = develop
 auto-checkout =
+    Zope
 
 [sources]
-Zope2 = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope
+Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope branch=fix-doctest
 
 [zopepy]
 recipe = zc.recipe.egg
