--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist =
 [testenv]
 skip_install = true
 bootstrap = {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
-buildout = {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir}
+buildout = {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} buildout:sources-dir={toxinidir}/develop
 run_command = coverage run {envbindir}/test {posargs:-vc1}
 commands =
     {[testenv]bootstrap}
@@ -40,4 +40,4 @@ commands =
     coverage combine
     coverage html -i
     coverage xml -i
-    coverage report -i
+    coverage report -i --fail-under=87
