Update to required the correct released Zope version.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,10 +12,9 @@ develop = .
 unzip = true
 sources-dir = develop
 auto-checkout =
-    Zope
 
 [sources]
-Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope branch=fix-doctest
+Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope
 
 [zopepy]
 recipe = zc.recipe.egg
