Make ZServer optional. (#15)
* Make ZServer optional.

* Refactor doctest into unittest to be able to skip the ZServer specific parts.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,12 +7,14 @@ extends =
 parts =
     zopepy
     test
+    test-zserver
 develop = .
 unzip = true
+sources-dir = develop
 auto-checkout =
 
 [sources]
-Zope2 = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope
+Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope
 
 [zopepy]
 recipe = zc.recipe.egg
@@ -24,3 +26,8 @@ eggs =
 recipe = zc.recipe.testrunner
 eggs =
     Products.PluggableAuthService
+
+[test-zserver]
+recipe = zc.recipe.testrunner
+eggs =
+    Products.PluggableAuthService[zserver]
