--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,9 +12,11 @@ develop = .
 unzip = true
 sources-dir = develop
 auto-checkout =
+    Products.PluginRegistry
 
 [sources]
 Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope
+Products.PluginRegistry = git ${buildout:github}/Products.PluginRegistry pushurl=${buildout:github_push}/Products.PluginRegistry
 
 [zopepy]
 recipe = zc.recipe.egg
