--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,15 @@ language: python
 sudo: false
 python:
     - 2.7
+    - 3.6
 env:
     - EXTRA=
-    - EXTRA=-zserver
+matrix:
+    include:
+        - python: 2.7
+          env: EXTRA=-zserver
+    allow_failures:
+    - python: 3.6
 install:
     - pip install six==1.10.0 # force to avoid conflict with zc.recipe.testrunner
     - pip install -U setuptools==33.1.1
