--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,10 +12,13 @@ develop = .
 unzip = true
 sources-dir = develop
 auto-checkout =
+    Products.GenericSetup
     Products.PluginRegistry
+    Zope
 
 [sources]
-Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope
+Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope branch=fix-ZCacheable_getModTime
+Products.GenericSetup = git ${buildout:github}/Products.GenericSetup pushurl=${buildout:github_push}/Products.GenericSetup branch=davisagli-py3-extension-2
 Products.PluginRegistry = git ${buildout:github}/Products.PluginRegistry pushurl=${buildout:github_push}/Products.PluginRegistry
 
 [zopepy]
