- add tox to buildout, move to released eggs for GenericSetup/PluginRegistry

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,31 +8,29 @@ parts =
     zopepy
     test
     test-zserver
+    tox
 develop = .
 unzip = true
 sources-dir = develop
 auto-checkout =
-    Products.GenericSetup
-    Products.PluginRegistry
     Zope
 
 [sources]
 Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope branch=fix-ZCacheable_getModTime
-Products.GenericSetup = git ${buildout:github}/Products.GenericSetup pushurl=${buildout:github_push}/Products.GenericSetup branch=davisagli-py3-extension-2
-Products.PluginRegistry = git ${buildout:github}/Products.PluginRegistry pushurl=${buildout:github_push}/Products.PluginRegistry
 
 [zopepy]
 recipe = zc.recipe.egg
 interpreter = zopepy
-eggs =
-    Products.PluggableAuthService
+eggs = Products.PluggableAuthService
 
 [test]
 recipe = zc.recipe.testrunner
-eggs =
-    Products.PluggableAuthService
+eggs = Products.PluggableAuthService
 
 [test-zserver]
 recipe = zc.recipe.testrunner
-eggs =
-    Products.PluggableAuthService[zserver]
+eggs = Products.PluggableAuthService[zserver]
+
+[tox]
+recipe = zc.recipe.egg
+eggs = tox
