- use Zope master branch and add flake8 tests for tox

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,7 +16,7 @@ auto-checkout =
     Zope
 
 [sources]
-Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope branch=fix-ZCacheable_getModTime
+Zope = git ${buildout:github}/Zope pushurl=${buildout:github_push}/Zope
 
 [zopepy]
 recipe = zc.recipe.egg
