--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     py27-zserver,
     py35,
     py36,
+    flake8,
     coverage-report,
 
 [testenv]
@@ -40,3 +41,14 @@ commands =
     coverage html -i
     coverage xml -i
     coverage report -i --fail-under=87
+
+[testenv:flake8]
+basepython = python3.6
+deps =
+    flake8
+    flake8-html
+    flake8-debugger
+
+commands =
+    - flake8 --format=html --htmldir={toxinidir}/parts/flake8 --doctests Products setup.py {posargs}
+    flake8 --doctests Products setup.py {posargs}
