- move old package docs into a standard Sphinx format

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ parts =
     test
     test-zserver
     tox
+    docs
 develop = .
 unzip = true
 sources-dir = develop
@@ -34,3 +35,9 @@ eggs = Products.PluggableAuthService[zserver]
 [tox]
 recipe = zc.recipe.egg
 eggs = tox
+
+[docs]
+recipe = zc.recipe.egg
+eggs =
+    Sphinx
+    Products.PluggableAuthService[docs]
