--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,22 +1,19 @@
 [buildout]
-parts = interpreter test
+parts = test
 develop = .
 unzip = true
-index = http://download.zope.org/Zope2/index/2.13.19/
 find-links =
-    http://pypi.python.org/packages/source/P/Products.GenericSetup/
-    http://pypi.python.org/packages/source/P/Products.PluginRegistry/
-    http://pypi.python.org/packages/source/f/five.localsitemanager/
+index = https://pypi.python.org/simple
 extends =
-    http://download.zope.org/Zope2/index/2.13.19/versions.cfg
-
-[interpreter]
-recipe = zc.recipe.egg
-interpreter = python
-eggs =
-    Products.PluggableAuthService
+    http://download.zope.org/Zope2/index/2.13.8/versions.cfg
 
 [test]
 recipe = zc.recipe.testrunner
 eggs =
     Products.PluggableAuthService
+
+[versions]
+setuptools = 33.1.1
+zc.buildout = 2.10.0
+Products.PluginRegistry = 1.2
+Products.GenericSetup = 1.8.9
