- make the buildout work again

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,9 @@
 [buildout]
-parts = interpreter test
-develop = .
-unzip = true
-index = http://download.zope.org/Zope2/index/2.13.19/
-find-links =
-    http://pypi.python.org/packages/source/P/Products.GenericSetup/
-    http://pypi.python.org/packages/source/P/Products.PluginRegistry/
-    http://pypi.python.org/packages/source/f/five.localsitemanager/
 extends =
-    http://download.zope.org/Zope2/index/2.13.19/versions.cfg
+    https://zopefoundation.github.io/Zope/releases/2.13.28/versions-prod.cfg
+parts = interpreter test
+versions = versions
+develop = .
 
 [interpreter]
 recipe = zc.recipe.egg
@@ -20,3 +15,6 @@ eggs =
 recipe = zc.recipe.testrunner
 eggs =
     Products.PluggableAuthService
+
+[versions]
+zc.buildout =
