--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ matrix:
           env: EXTRA=-zserver
         - python: "3.7"
           dist: xenial
-          sudo: true
+        - python: "3.8-dev"
+          dist: xenial
 install:
     - pip install zc.buildout coverage coveralls
     - buildout bootstrap
