--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ envlist =
 [testenv]
 skip_install = true
 bootstrap = {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
-buildout = {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} buildout:sources-dir={toxinidir}/develop
+buildout = {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir}
 run_command = coverage run {envbindir}/test {posargs:-vc1}
 commands =
     {[testenv]bootstrap}
