- specifying and applying stricter linting rules

--- a/tox.ini
+++ b/tox.ini
@@ -10,46 +10,62 @@ envlist =
     coverage-report,
 
 [testenv]
-skip_install = true
 bootstrap = {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} bootstrap
 buildout = {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir}
-run_command = coverage run {envbindir}/test {posargs:-vc1}
 commands =
     {[testenv]bootstrap}
     {[testenv]buildout} install test
-    coverage run {envbindir}/test {posargs:-vc1}
+    {envbindir}/test {posargs:-vc1}
 deps =
     zc.buildout
-    coverage
-setenv =
-    COVERAGE_FILE=.coverage.{envname}
+skip_install = true
 
 [testenv:py27-zserver]
 commands =
     {[testenv]bootstrap}
     {[testenv]buildout} install test-zserver
-    coverage run {envbindir}/test-zserver {posargs:-vc1}
+    {envbindir}/test-zserver {posargs:-vc1}
 
 [testenv:coverage-report]
 basepython = python2.7
-deps = coverage
-setenv =
-    COVERAGE_FILE=.coverage
-skip_install = true
 commands =
+    {[testenv]bootstrap}
+    {[testenv]buildout} install test
     coverage erase
-    coverage combine
+    coverage run {envbindir}/test {posargs:-vc1}
+    - coverage combine
     coverage html -i
     coverage xml -i
     coverage report -i --fail-under=87
+deps =
+    {[testenv]deps}
+    coverage
+setenv =
+    COVERAGE_FILE={toxinidir}/.coverage
 
 [testenv:flake8]
 basepython = python3.6
-deps =
-    flake8
-    flake8-html
-    flake8-debugger
-
+commands_pre =
+    mkdir -p {toxinidir}/parts/flake8
 commands =
-    - flake8 --format=html --htmldir={toxinidir}/parts/flake8 --doctests Products setup.py {posargs}
-    flake8 --doctests Products setup.py {posargs}
+    isort --check-only --diff --recursive {toxinidir}/Products setup.py
+    - flake8 --format=html Products tests setup.py {posargs}
+    flake8 Products tests setup.py {posargs}
+deps =
+    isort
+    flake8
+    # helper to generate HTML reports:
+    flake8-html
+    # Useful flake8 plugins that are Python and Plone specific:
+    flake8-coding
+    flake8-debugger
+    flake8-deprecated
+    flake8-todo
+    flake8-isort
+    mccabe
+    flake8-blind-except
+    flake8-commas
+    flake8-string-format
+    flake8-quotes
+whitelist_externals =
+    mkdir
