--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,46 @@
-[coverage:run]
-branch = True
-source = Products.PluggableAuthService
-
-[coverage:report]
-precision = 2
-
 [bdist_wheel]
 universal = 1
 
 [zest.releaser]
 create-wheel = yes
 
+[check-manifest]
+ignore =
+    coverage.xml
+    tox.ini
+    .travis.yml
+
+[isort]
+force_single_line = True
+combine_as_imports = True
+sections = FUTURE,STDLIB,THIRDPARTY,ZOPE,FIRSTPARTY,LOCALFOLDER
+known_first_party = Products.PluggableAuthService
+known_third_party = six
+known_zope =
+default_section = ZOPE
+line_length = 79
+lines_after_imports = 2
+not_skip =
+    __init__.py
+
+[flake8]
+no-accept-encodings = True
+doctests = True
+exclude =
+    bootstrap.py
+htmldir = parts/flake8
+
+[coverage:run]
+branch = True
+source = Products
+omit =
+
+[coverage:report]
+fail_under = 85.00
+ignore_errors = True
+precision = 2
+show_missing = False
+sort = Name
+
+[coverage:html]
+directory = parts/coverage
