--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,39 @@
 language: python
-sudo: false
-python:
-    - 2.7
-    - 3.5
-    - 3.6
-env:
-    - EXTRA=
+
 matrix:
     include:
-        - python: 2.7
-          env: EXTRA=-zserver
+        - python: "3.6"
+          env: TOXENV=flake8
+        - python: "3.6"
+          env: TOXENV=coverage-report
+          after_success:
+              - coveralls
+        - python: "2.7"
+          env: TOXENV=py27
+        - python: "2.7"
+          env: TOXENV=py27-zserver
+        - python: "3.5"
+          env: TOXENV=py35
+        - python: "3.6"
+          env: TOXENV=py36
         - python: "3.7"
+          env: TOXENV=py37
           dist: xenial
         - python: "3.8-dev"
+          env: TOXENV=py38
           dist: xenial
+
 install:
-    - pip install zc.buildout coverage coveralls
-    - buildout bootstrap
-    - buildout
+    - travis_retry pip install -U pip setuptools tox
+    - travis_retry pip install -U coverage coveralls
+
 script:
-    - coverage run bin/test$EXTRA --all -cv
-after_success:
-    - coveralls
+    - travis_retry tox
+
 notifications:
     email: false
+
 cache:
   pip: true
   directories:
     - eggs/
-    - develop/
