Improve coverage configuration by taking more code branches into coverage.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,7 @@ parts =
     zopepy
     test
     test-zserver
+    test-ip_range
     tox
     docs
 develop = .
@@ -21,6 +22,10 @@ eggs = Products.PluggableAuthService
 [test-zserver]
 recipe = zc.recipe.testrunner
 eggs = Products.PluggableAuthService[zserver]
+
+[test-ip_range]
+recipe = zc.recipe.testrunner
+eggs = Products.PluggableAuthService[ip_range]
 
 [tox]
 recipe = zc.recipe.egg
