--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     py35,
     py36,
     py37,
+    py37-ip_range,
     py38,
     flake8,
     coverage-report,
@@ -24,21 +25,34 @@ skip_install = true
 commands =
     {[testenv]bootstrap}
     {[testenv]buildout} install test-zserver
-    {envbindir}/test-zserver {posargs:-vc1}
+    coverage run {envbindir}/test-zserver {posargs:-vc1}
+deps =
+    {[testenv]deps}
+    coverage
+setenv =
+    COVERAGE_FILE=.coverage.{envname}
+
+[testenv:py37-ip_range]
+commands =
+    {[testenv]bootstrap}
+    {[testenv]buildout} install test-ip_range
+    coverage run {envbindir}/test-ip_range {posargs:-vc1}
+deps =
+    {[testenv]deps}
+    coverage
+setenv =
+    COVERAGE_FILE=.coverage.{envname}
 
 [testenv:coverage-report]
 basepython = python3.6
+skip_install = true
 commands =
-    {[testenv]bootstrap}
-    {[testenv]buildout} install test
     coverage erase
-    coverage run {envbindir}/test {posargs:-vc1}
-    - coverage combine
+    coverage combine
     coverage html -i
     coverage xml -i
-    coverage report -i --fail-under=87
+    coverage report -i --fail-under=89
 deps =
-    {[testenv]deps}
     coverage
 setenv =
     COVERAGE_FILE={toxinidir}/.coverage
