--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,12 @@ matrix:
     include:
         - python: "3.6"
           env: TOXENV=flake8
-        - python: "3.6"
-          env: TOXENV=coverage-report
-          after_success:
-              - coveralls
         - python: "2.7"
           env: TOXENV=py27
         - python: "2.7"
           env: TOXENV=py27-zserver
+          after_success:
+              - coveralls
         - python: "3.5"
           env: TOXENV=py35
         - python: "3.6"
@@ -19,13 +17,18 @@ matrix:
         - python: "3.7"
           env: TOXENV=py37
           dist: xenial
+        - python: "3.7"
+          env: TOXENV=py37-ip_range
+          dist: xenial
+          after_success:
+              - coveralls
         - python: "3.8-dev"
           env: TOXENV=py38
           dist: xenial
 
 install:
     - travis_retry pip install -U pip setuptools tox
-    - travis_retry pip install -U coverage coveralls
+    - travis_retry pip install -U coveralls
 
 script:
     - travis_retry tox
