--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ matrix:
         - python: "2.7"
           env: TOXENV=py27-zserver
           after_success:
+              - coverage combine
               - coveralls
         - python: "3.5"
           env: TOXENV=py35
@@ -21,6 +22,7 @@ matrix:
           env: TOXENV=py37-ip_range
           dist: xenial
           after_success:
+              - coverage combine
               - coveralls
         - python: "3.8-dev"
           env: TOXENV=py38
@@ -28,7 +30,7 @@ matrix:
 
 install:
     - travis_retry pip install -U pip setuptools tox
-    - travis_retry pip install -U coveralls
+    - travis_retry pip install -U coverage coveralls
 
 script:
     - travis_retry tox
