--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
           after_success:
               - coverage combine
               - coveralls
-        - python: "3.8-dev"
+        - python: "3.8"
           env: TOXENV=py38
           dist: xenial
 
