- fix Python 2 compatibility

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends =
-    https://zopefoundation.github.io/Zope/releases/master/versions-prod.cfg
+    https://zopefoundation.github.io/Zope/releases/4.x/versions-prod.cfg
 parts =
     zopepy
     test
@@ -9,6 +9,9 @@ parts =
     tox
     docs
 develop = .
+
+[versions]
+SoupSieve  = <2
 
 [zopepy]
 recipe = zc.recipe.egg
