Remove obsolete isort options
modified:   setup.cfg
modified:   tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -62,7 +62,7 @@ basepython = python3.6
 commands_pre =
     mkdir -p {toxinidir}/parts/flake8
 commands =
-    isort --check-only --diff --recursive {toxinidir}/Products setup.py
+    isort --check-only --diff {toxinidir}/Products setup.py
     - flake8 --format=html Products setup.py {posargs}
     flake8 Products setup.py {posargs}
 deps =
