Apply updated isort on code base
This brings massive changes with it.

Especially, isort 5 now breaks long import statements after the `import`
keyword, which then breaks with `flake8`s line length option.

To counter this, I configured `multi_line_output = 7` - which puts a
noqa at the end of too long import statements.

There are other alternatives
https://github.com/timothycrosley/isort#multi-line-output-modes

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ known_zope =
 default_section = ZOPE
 line_length = 79
 lines_after_imports = 2
+multi_line_output = 7
 
 [flake8]
 no-accept-encodings = True
