- rename tox config flake8 to lint

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 matrix:
     include:
         - python: "3.6"
-          env: TOXENV=flake8
+          env: TOXENV=lint
         - python: "2.7"
           env: TOXENV=py27
         - python: "2.7"
@@ -17,16 +17,13 @@ matrix:
           env: TOXENV=py36
         - python: "3.7"
           env: TOXENV=py37
-          dist: xenial
         - python: "3.7"
           env: TOXENV=py37-ip_range
-          dist: xenial
           after_success:
               - coverage combine
               - coveralls
         - python: "3.8"
           env: TOXENV=py38
-          dist: xenial
 
 install:
     - travis_retry pip install -U pip setuptools tox
