--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    flake8,
+    lint,
     py27,
     py27-zserver,
     py35,
@@ -54,10 +54,18 @@ commands =
     coverage report -i --fail-under=89
 deps =
     coverage
+depends =
+    py27,
+    py27-zserver,
+    py35,
+    py36,
+    py37,
+    py37-ip_range,
+    py38,
 setenv =
     COVERAGE_FILE={toxinidir}/.coverage
 
-[testenv:flake8]
+[testenv:lint]
 basepython = python3.6
 commands_pre =
     mkdir -p {toxinidir}/parts/flake8
