- Products.PageTemplates is part of Zope

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ combine_as_imports = True
 sections = FUTURE,STDLIB,THIRDPARTY,ZOPE,FIRSTPARTY,LOCALFOLDER
 known_first_party = Products.PluggableAuthService
 known_third_party = six
-known_zope =
+known_zope = Products.PageTemplates
 default_section = ZOPE
 line_length = 79
 lines_after_imports = 2
