--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ ignore =
 force_single_line = True
 combine_as_imports = True
 sections = FUTURE,STDLIB,THIRDPARTY,ZOPE,FIRSTPARTY,LOCALFOLDER
-known_first_party = Products.PluggableAuthService
+known_local_folder = Products.PluggableAuthService
 known_third_party = six
 known_zope = Products.PageTemplates
 default_section = ZOPE
