Test Python 3.6+ against Zope 5.
Keep older versions running against Zope 4.

--- a/tox.ini
+++ b/tox.ini
@@ -22,9 +22,22 @@ skip_install = true
 setenv =
     COVERAGE_FILE=.coverage.{envname}
 
+[testenv:py27]
+buildout = {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir}
+commands =
+    {[testenv:py27]buildout} install test
+    {envbindir}/test {posargs:-vc1}
+
+[testenv:py35]
+buildout = {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir}
+commands =
+    {[testenv:py35]buildout} install test
+    {envbindir}/test {posargs:-vc1}
+
+
 [testenv:py27-zserver]
 commands =
-    {[testenv]buildout} install test-zserver
+    {[testenv:py27]buildout} install test-zserver
     coverage run {envbindir}/test-zserver {posargs:-vc1}
 
 [testenv:py37-ip_range]
