--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,9 @@ force_single_line = True
 combine_as_imports = True
 sections = FUTURE,STDLIB,THIRDPARTY,ZOPE,FIRSTPARTY,LOCALFOLDER
 known_local_folder = Products.PluggableAuthService
+known_first_party = Products.PluginRegistry, Products.StandardCacheManagers, Products.GenericSetup
 known_third_party = six
-known_zope = Products.PageTemplates
+known_zope = 
 default_section = ZOPE
 line_length = 79
 lines_after_imports = 2
