--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,8 @@ envlist =
     py39
     docs
     coverage
+    py27-zserver
+    py37-ip_range
 
 [testenv]
 skip_install = true
@@ -24,6 +26,18 @@ commands_pre =
     !py27-!py35: {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
 commands =
     {envbindir}/test {posargs:-cv}
+
+[testenv:py27-zserver]
+commands_pre =
+    {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test-zserver
+commands =
+    {envbindir}/test-zserver {posargs:-cv}
+
+[testenv:py37-ip_range]
+commands_pre =
+    {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test-ip_range
+commands =
+    {envbindir}/test-ip_range {posargs:-cv}
 
 [testenv:lint]
 basepython = python3
@@ -47,7 +61,6 @@ deps =
     # Useful flake8 plugins that are Python and Plone specific:
     flake8-coding
     flake8-debugger
-    flake8-string-format
     mccabe
 
 [testenv:isort-apply]
