--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,8 @@ jobs:
         - ["3.9",   "py39"]
         - ["3.8",   "docs"]
         - ["3.8",   "coverage"]
+        - ["2.7",   "py27-zserver"]
+        - ["3.7",   "py37-ip_range"]
 
     runs-on: ubuntu-latest
     name: ${{ matrix.config[1] }}
