--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,14 @@ bin/
 build/
 coverage.xml
 develop-eggs/
+develop/
 dist/
 docs/_build
 eggs/
+etc/
 lib/
 lib64
+log/
 parts/
 pyvenv.cfg
+var/
