--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,6 @@ skip_install = true
 deps =
     setuptools < 52
     zc.buildout
-    zope.testrunner
 commands_pre =
     py27,py35: {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
     !py27-!py35: {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
@@ -101,7 +100,7 @@ commands =
 [coverage:run]
 branch = True
 plugins = coverage_python_version
-source = src
+source = Products.PluggableAuthService
 
 [coverage:report]
 precision = 2
