- prepare release 2.8.0 with Python 3.11 support and test fixes

--- a/buildout4.cfg
+++ b/buildout4.cfg
@@ -4,4 +4,5 @@ extends =
     https://zopefoundation.github.io/Zope/releases/4.x/versions.cfg
 
 [versions]
+Products.PluggableAuthService =
 SoupSieve  = <2
