--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,6 @@
 minversion = 3.18
 envlist =
     lint
-    py27
-    py35
-    py36
     py37
     py38
     py39
@@ -14,8 +11,7 @@ envlist =
     py311
     docs
     coverage
-    py27-zserver
-    py37-ip_range
+    py39-ip_range
 
 [testenv]
 skip_install = true
@@ -23,18 +19,11 @@ deps =
     zc.buildout >= 3.0.1
     wheel > 0.37
 commands_pre =
-    py27,py35: {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
-    !py27-!py35: {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+    {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
 commands =
     {envdir}/bin/test {posargs:-cv}
 
-[testenv:py27-zserver]
-commands_pre =
-    {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test-zserver
-commands =
-    {envbindir}/test-zserver {posargs:-cv}
-
-[testenv:py37-ip_range]
+[testenv:py39-ip_range]
 commands_pre =
     {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test-ip_range
 commands =
@@ -48,7 +37,6 @@ allowlist_externals =
     mkdir
 commands =
     isort --check-only --diff {toxinidir}/src {toxinidir}/setup.py
-    - flake8 {toxinidir}/src {toxinidir}/setup.py
     flake8 {toxinidir}/src {toxinidir}/setup.py
     check-manifest
     check-python-versions
@@ -87,16 +75,14 @@ allowlist_externals =
 deps =
     {[testenv]deps}
     coverage
-    coverage-python-version
 commands =
     mkdir -p {toxinidir}/parts/htmlcov
     coverage run {envdir}/bin/test {posargs:-cv}
     coverage html
-    coverage report -m --fail-under=89
+    coverage report -m --fail-under=90
 
 [coverage:run]
 branch = True
-plugins = coverage_python_version
 source = Products.PluggableAuthService
 
 [coverage:report]
