Integrate .readthedocs.yaml, done using https://github.com/zopefoundation/meta/pull/205.

--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,7 @@ commands =
 basepython = python3
 skip_install = true
 allowlist_externals =
+    {[testenv]allowlist_externals}
     mkdir
 deps =
     {[testenv]deps}
