--- a/.meta.toml
+++ b/.meta.toml
@@ -2,7 +2,7 @@
 # https://github.com/zopefoundation/meta/tree/master/config/zope-product
 [meta]
 template = "zope-product"
-commit-id = "4f0f7596"
+commit-id = "b21fbbf2"
 
 [python]
 with-pypy = false
@@ -25,6 +25,7 @@ additional-ignores = [
 
 [manifest]
 additional-rules = [
+    "include *.yaml",
     "recursive-include src *.gif",
     "recursive-include src *.objects",
     "recursive-include src *.png",
