--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,9 @@ ignore =
 force_single_line = True
 combine_as_imports = True
 sections = FUTURE,STDLIB,THIRDPARTY,ZOPE,FIRSTPARTY,LOCALFOLDER
-known_third_party = six, docutils, pkg_resources
+known_third_party = docutils, pkg_resources, pytz
 known_zope =
-known_first_party =Products.PluginRegistry, Products.StandardCacheManagers, Products.GenericSetup
+known_first_party = Products.PluginRegistry, Products.StandardCacheManagers, Products.GenericSetup
 default_section = ZOPE
 line_length = 79
 lines_after_imports = 2
