Configuring for zope-product

--- a/tox.ini
+++ b/tox.ini
@@ -3,31 +3,53 @@
 [tox]
 minversion = 3.18
 envlist =
+    release-check
     lint
-    py37
     py38
     py39
     py310
     py311
+    py312
     docs
     coverage
-    py39-ip_range
+    py311-ip_range
 
 [testenv]
 skip_install = true
 deps =
+    setuptools < 69
     zc.buildout >= 3.0.1
     wheel > 0.37
+setenv =
+    py312: VIRTUALENV_PIP=23.1.2
+    py312: PIP_REQUIRE_VIRTUALENV=0
 commands_pre =
     {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
 commands =
-    {envdir}/bin/test {posargs:-cv}
+    {envbindir}/test {posargs:-cv}
 
-[testenv:py39-ip_range]
+[testenv:py311-ip_range]
 commands_pre =
     {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test-ip_range
 commands =
     {envbindir}/test-ip_range {posargs:-cv}
+
+[testenv:release-check]
+description = ensure that the distribution is ready to release
+basepython = python3
+skip_install = true
+deps =
+    twine
+    build
+    check-manifest
+    check-python-versions >= 0.20.0
+    wheel
+commands_pre =
+commands =
+    check-manifest
+    check-python-versions --only setup.py,tox.ini,.github/workflows/tests.yml
+    python -m build --sdist --no-isolation
+    twine check dist/*
 
 [testenv:lint]
 basepython = python3
@@ -38,11 +60,7 @@ allowlist_externals =
 commands =
     isort --check-only --diff {toxinidir}/src {toxinidir}/setup.py
     flake8 {toxinidir}/src {toxinidir}/setup.py
-    check-manifest
-    check-python-versions
 deps =
-    check-manifest
-    check-python-versions
     flake8
     isort
     # Useful flake8 plugins that are Python and Plone specific:
@@ -78,7 +96,7 @@ deps =
     coverage
 commands =
     mkdir -p {toxinidir}/parts/htmlcov
-    coverage run {envdir}/bin/test {posargs:-cv}
+    coverage run {envbindir}/test {posargs:-cv}
     coverage html
     coverage report -m --fail-under=90
 
@@ -88,6 +106,7 @@ source = Products.PluggableAuthService
 
 [coverage:report]
 precision = 2
+ignore_errors = True
 exclude_lines =
     pragma: no cover
     pragma: nocover
