Configuring for zope-product

--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,11 @@ minversion = 3.18
 envlist =
     release-check
     lint
-    py38
     py39
     py310
     py311
     py312
+    py313
     docs
     coverage
     py311-ip_range
@@ -17,12 +17,10 @@ envlist =
 [testenv]
 skip_install = true
 deps =
-    setuptools < 69
-    zc.buildout >= 3.0.1
-    wheel > 0.37
+    setuptools == 75.8.2
+    zc.buildout
+    wheel
 setenv =
-    py312: VIRTUALENV_PIP=23.1.2
-    py312: PIP_REQUIRE_VIRTUALENV=0
 commands_pre =
     {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
 commands =
@@ -34,11 +32,21 @@ commands_pre =
 commands =
     {envbindir}/test-ip_range {posargs:-cv}
 
+[testenv:setuptools-latest]
+basepython = python3
+deps =
+    git+https://github.com/pypa/setuptools.git\#egg=setuptools
+    zc.buildout
+    wheel
+
+
 [testenv:release-check]
 description = ensure that the distribution is ready to release
 basepython = python3
 skip_install = true
 deps =
+    setuptools == 75.8.2
+    wheel
     twine
     build
     check-manifest
@@ -52,29 +60,14 @@ commands =
     twine check dist/*
 
 [testenv:lint]
+description = This env runs all linters configured in .pre-commit-config.yaml
 basepython = python3
-commands_pre =
-    mkdir -p {toxinidir}/parts/flake8
-allowlist_externals =
-    mkdir
-commands =
-    isort --check-only --diff {toxinidir}/src {toxinidir}/setup.py
-    flake8 {toxinidir}/src {toxinidir}/setup.py
+skip_install = true
 deps =
-    flake8
-    isort
-    # Useful flake8 plugins that are Python and Plone specific:
-    flake8-coding
-    flake8-debugger
-    mccabe
-
-[testenv:isort-apply]
-basepython = python3
+    pre-commit
 commands_pre =
-deps =
-    isort
 commands =
-    isort {toxinidir}/src {toxinidir}/setup.py []
+    pre-commit run --all-files --show-diff-on-failure
 
 [testenv:docs]
 basepython = python3
@@ -93,28 +86,9 @@ allowlist_externals =
     mkdir
 deps =
     {[testenv]deps}
-    coverage
+    coverage[toml]
 commands =
     mkdir -p {toxinidir}/parts/htmlcov
     coverage run {envbindir}/test {posargs:-cv}
     coverage html
-    coverage report -m --fail-under=90
-
-[coverage:run]
-branch = True
-source = Products.PluggableAuthService
-
-[coverage:report]
-precision = 2
-ignore_errors = True
-exclude_lines =
-    pragma: no cover
-    pragma: nocover
-    except ImportError:
-    raise NotImplementedError
-    if __name__ == '__main__':
-    self.fail
-    raise AssertionError
-
-[coverage:html]
-directory = parts/htmlcov
+    coverage report
