- Drop Python 3.9, add Python 3.14, convert to PEP 420

--- a/.meta.toml
+++ b/.meta.toml
@@ -2,7 +2,7 @@
 # https://github.com/zopefoundation/meta/tree/master/config/zope-product
 [meta]
 template = "zope-product"
-commit-id = "a0de4e93"
+commit-id = "9fcd3d67"
 
 [python]
 with-pypy = false
@@ -21,6 +21,7 @@ known_first_party = "Products.PluginRegistry, Products.StandardCacheManagers, Pr
 [check-manifest]
 additional-ignores = [
     "docs/_build/html/_sources/api/*",
+    "docs/_build/html/_static/scripts/*",
     ]
 
 [manifest]
