--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ ignore =
     .meta.toml
     docs/_build/html/_sources/*
     docs/_build/html/_sources/api/*
+    docs/_build/html/_static/scripts/*
 
 [isort]
 force_single_line = True
